--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -468,7 +468,7 @@ service drm /system/bin/drmserver
 service media /system/bin/mediaserver
     class main
     user media
-    group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc qcom_diag drm system
+    group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc qcom_diag
     ioprio rt 4
 
 service bootanim /system/bin/bootanimation
