Redirect rilproxy to rild
Change-Id: I40553abc8f69a41430d041318a12e6d48ca347b8

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -31,6 +31,9 @@ sysclktz 0
 
 loglevel 3
 
+# Redirect rilpoxy to rild
+    symlink /dev/socket/rild /dev/socket/rilproxy
+
 # Backward compatibility
     symlink /system/etc /etc
     symlink /sys/kernel/debug /d
